--- a/src/index.scss
+++ b/src/index.scss
@@ -18,4 +18,20 @@ body {
     font-size: 24px;
     margin: 0;
   }
+
+  input {
+    border: 1px solid #ced4da;
+    border-radius: 2px;
+    background-color: #fff;
+    outline: none;
+  }
+  button {
+    border: 1px solid #bdbdbd;
+    background-color: #efefef;
+    border-radius: 2px;
+
+    &:hover {
+      background-color: #e5e5e5;
+    }
+  }
 }
