--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,24 @@
 .App {
   padding: 11px;
+
+  .form-login {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+
+    .form-login-row {
+      width: 145px;
+      position: relative;
+      overflow: hidden;
+      float: left;
+
+      .red-txt {
+        color: #f00;
+      }
+    }
+  }
+
+  .display-json {
+    margin-top: 11px;
+  }
 }
